--- a/index.html
+++ b/index.html
@@ -8,60 +8,59 @@
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
-    <h1>
-      <span>Reliable, efficient delivery</span>
-      <br />
-      <span>Powered by Technology</span>
-    </h1>
-    <p class="description">
-      Our Artificial Intelligence powered tools use millions of project data
-      points to ensure that your project is successful
-    </p>
+    <main>
+      <h1>
+        <span>Reliable, efficient delivery</span>
+        <br />
+        <span>Powered by Technology</span>
+      </h1>
+      <p class="description">
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
 
-    <section class="card-wrapper">
-      <div class="card team-builder">
-        <h2>Team Builder</h2>
-        <p>
-          Scans our talent network to create the optimal team for your project
-        </p>
-        <img
-          src="images/icon-team-builder.svg"
-          alt="Team Builder Icon"
-          class="card-icon"
-        />
-      </div>
+      <section class="card-wrapper">
+        <div class="card team-builder">
+          <h2>Team Builder</h2>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img
+            src="images/icon-team-builder.svg"
+            alt="Team Builder Icon"
+            class="card-icon"
+          />
+        </div>
 
-      <div class="card supervisor">
-        <h2>Supervisor</h2>
-        <p>Monitors activity to identify project roadblocks</p>
-        <img
-          src="images/icon-supervisor.svg"
-          alt="Supervisor Icon"
-          class="card-icon"
-        />
-      </div>
+        <div class="card supervisor">
+          <h2>Supervisor</h2>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img
+            src="images/icon-supervisor.svg"
+            alt="Supervisor Icon"
+            class="card-icon"
+          />
+        </div>
 
-      <div class="card calculator">
-        <h2>Calculator</h2>
-        <p>Uses data from past projects to provide better delivery estimates</p>
-        <img
-          src="images/icon-calculator.svg"
-          alt="Calculator Icon"
-          class="card-icon"
-        />
-      </div>
+        <div class="card calculator">
+          <h2>Calculator</h2>
+          <p>
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img
+            src="images/icon-calculator.svg"
+            alt="Calculator Icon"
+            class="card-icon"
+          />
+        </div>
 
-      <div class="card karma">
-        <h2>Karma</h2>
-        <p>Regularly evaluates our talent to ensure quality</p>
-        <img
-          src="images/icon-karma.svg"
-          alt="Karma Icon"
-          class="card-icon"
-        />
-      </div>
-    </section>
-
+        <div class="card karma">
+          <h2>Karma</h2>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" alt="Karma Icon" class="card-icon" />
+        </div>
+      </section>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
