--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
-    <h1>
-      <span>Reliable, efficient delivery</span>
-      <br />
-      <span>Powered by Technology</span>
-    </h1>
-    <p class="description">
-      Our Artificial Intelligence powered tools use millions of project data
-      points to ensure that your project is successful
-    </p>
-    
+    <header role="banner">
+      <h1>
+        <span>Reliable, efficient delivery</span>
+        <br />
+        <span>Powered by Technology</span>
+      </h1>
+      <p class="description">
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
+    </header>
+
     <main>
-      <section class="card-wrapper">
+      <div class="card-wrapper">
         <div class="card team-builder">
           <h2>Team Builder</h2>
           <p>
@@ -59,8 +61,9 @@
           <p>Regularly evaluates our talent to ensure quality</p>
           <img src="images/icon-karma.svg" alt="Karma Icon" class="card-icon" />
         </div>
-      </section>
+      </div>
     </main>
+
     <footer>
       <p class="attribution">
         Challenge by
