--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
-    <header role="banner">
+    <header>
       <h1>
         <span>Reliable, efficient delivery</span>
         <br />
